--- a/package.json
+++ b/package.json
@@ -2,10 +2,8 @@
   "name": "okta-set-new-password",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "main": "app.js",
+  "scripts": { "start" : "node app.js" },
   "author": "",
   "license": "ISC",
   "dependencies": {
